tests/NormalTests/paczka1/fuzzy1/87395567.err
Error in line 7: MVrlz67w A839 96,1
Error in line 14: qGoSjHo41ak A839 58,2
Error in line 16: S233 S224 45,6
